# GaMAC

./: .gitignore  Dockerfile  README.md  README_RU.md  download_minio.py  minio.enc  pyCUDA_requierements.txt  pyproject.toml  requierements.txt  requirements.txt  test.py
.github/workflows/: cd_3060.yml  cd_3070.yml  cd_4070.yml  ci_cd_3060.yml  ci_cd_3070.yml  ci_cd_4070.yml  ci_cd_4090.yml  test_pypi.yaml
.minio_venv/: pyvenv.cfg
.minio_venv/Scripts/: activate  activate.bat
data/: meta-dataset.csv
devops/: Dockerfile  download_minio.py  public.enc  test.py
devops/comparison/: Dockerfile
docs/: CASE.md  CASE_RU.md  DEPLOY.md  DEPLOY_RU.md  GLOSSARY.md  GLOSSARY_RU.md  OVERVIEW.md  OVERVIEW_RU.md  QUICK_START.md  QUICK_START_RU.md
docs/source/: conf.py  gamac.algorithms.rst  gamac.estimation.rst  gamac.meta.rst  gamac.meta.storage.rst  gamac.pipeline.rst  modules.rst
gamac/: autoclustering.py  gamac.py
gamac/algorithms/: affinity.py  affinity_cpu.py  affinity_gpu.py  agglomerative.py  base.py  birch.py  birch_cupy.py  birch_gpu.py  bisecting_kmeans.py  bisecting_kmeans_cpu.py  bisecting_kmeans_cupy.py  dbscan.py  hdbscan.py  kmeans.py  kmeans_gpu_cupy.py  meanshift.py
gamac/data/: data_enrichment.py  data_pipeline.py  modal_preprocessing.py  table_preprocessing.py
gamac/estimation/: container.py  external.py  functions.py  internal.py
gamac/kernels/: __init__.py  cvi-kernels.c  kmeans-kernels.c  meta-kernels.c  middleware.py
gamac/meta/: README.md  __init__.py  build.py  collector.py  features.py  generator.py  gui.py  measures.py  orderings.py  premeta.py  producers.py  render.py  scorings.py  tuning.logs  tuning.py
gamac/meta/impl/: cvi.py  (+7 more)
gamac/pipeline/: automl_pipeline.py  config_samplers.py  cvi_predictor.py  data_pipeline.py  hyper_optimisers.py  mab_solvers.py  meta_pipeline.py  run_types.py
gamac/tests/: agglomerative.py  agglomerative_tests.py  bisecting_kmeans.py  clustering_algo_test.py  dbscan.py  kmeans.py  meanshift.py  measures_test.py  utils.py
notebooks/: About notebooks.md  README.md  basic_example.ipynb  embedder_testing copy.ipynb  embedder_testing.ipynb  example_on_realdata.ipynb  experiment_notebook.ipynb  experiment_on_optimizers.ipynb  pipeline_testing.ipynb
notebooks/examples/: basic_example.ipynb  cvi_accuracy.ipynb  example_on_realdata.ipynb  meta_cvi.ipynb
notebooks/experiments/: experiment_on_optimizers.ipynb
sandbox/: example_pycuda.py  kmeans_gpu_cupy.py
test-data/: gen.csv
(+53 files in other folders)
