[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"gamac.kernels" = ["*.c"]
"gamac.bin" = ["*.pkl"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test", "notebooks", "data", "docs"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[project]
name = "Gamac"
version = "0.1.0"
description = "Framework for automative prompting creation and optimization"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
    "accelerate==0.33.0",
    "cuda-bindings==12.8.0",
    "cuda-python==12.8.0",
    "cupy-cuda12x==13.3.0",
    "cuvs-cu12==25.2.1",
    "distributed==2024.12.1",
    "distributed-ucxx-cu12==0.42.0",
    "huggingface-hub==0.24.6",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "libcuvs-cu12==25.2.1",
    "libraft-cu12==25.2.0",
    "libucx-cu12==1.18.1",
    "libucxx-cu12==0.42.0",
    "llvmlite==0.43.0",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "numba==0.60.0",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.8.3.14",
    "nvidia-cuda-cupti-cu12==12.8.57",
    "nvidia-cuda-nvrtc-cu12==12.8.61",
    "nvidia-cuda-runtime-cu12==12.8.57",
    "nvidia-cudnn-cu12==9.7.1.26",
    "nvidia-cufft-cu12==11.3.3.41",
    "nvidia-curand-cu12==10.3.9.55",
    "nvidia-cusolver-cu12==11.7.2.55",
    "nvidia-cusparse-cu12==12.5.7.53",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-ml-py==12.570.86",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.8.61",
    "nvidia-nvtx-cu12==12.8.55",
    "optuna==4.3.0",
    "packaging==24.1",
    "pillow==10.4.0",
    "pyarrow==17.0.0",
    "safetensors==0.4.4",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "SQLAlchemy==2.0.40",
    "sympy==1.13.3",
    "tokenizers==0.19.1",
    "torch==2.7.0+cu128",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "wheel==0.45.1",
    "xgboost==3.0.0",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]